# rustcc_scraper

./: AGENTS.md  CLAUDE.md  Cargo.toml  README.md  rust_diary_tmpl.md
outputs/: rust_diary-2024-09-10.md  rust_diary-2024-09-12.md  rust_diary-2024-09-13.md  rust_diary-2024-09-14.md  rust_diary-2024-09-16.md  rust_diary-2024-09-19.md  rust_diary-2024-09-21.md  rust_diary-2024-09-22.md  rust_diary-2024-09-23.md  rust_diary-2024-09-25.md  rust_diary-2024-09-26.md  rust_diary-2024-09-29.md  rust_diary-2024-10-01.md  rust_diary-2024-10-02.md  rust_diary-2024-10-04.md  rust_diary-2024-10-06.md  rust_diary-2024-10-09.md  rust_diary-2024-10-11.md  rust_diary-2024-10-13.md  rust_diary-2024-10-14.md  rust_diary-2024-10-16.md  rust_diary-2024-10-18.md  rust_diary-2024-10-20.md  rust_diary-2024-10-22.md  rust_diary-2024-10-24.md  rust_diary-2024-10-26.md  rust_diary-2024-10-28.md  rust_diary-2024-10-30.md  rust_diary-2024-11-01.md  rust_diary-2024-11-04.md  rust_diary-2024-11-05.md  rust_diary-2024-11-07.md  rust_diary-2024-11-09.md  rust_diary-2024-11-11.md  rust_diary-2024-11-13.md  rust_diary-2024-11-15.md  rust_diary-2024-11-17.md  rust_diary-2024-11-19.md  rust_diary-2024-11-21.md  rust_diary-2024-11-23.md  (+8 more)
src/: call_claude.rs  claude.rs  main.rs
tmp/: rust_diary-2024-09-10.txt  rust_diary-2024-09-12.txt  rust_diary-2024-09-13.txt  rust_diary-2024-09-14.txt  rust_diary-2024-09-16.txt  rust_diary-2024-09-21.txt  rust_diary-2024-09-21_bak.txt  rust_diary-2024-09-22.txt  rust_diary-2024-09-23.txt  rust_diary-2024-09-25.txt  rust_diary-2024-09-26.txt  rust_diary-2024-09-29.txt  (+37 more)
